<L2S20-116> #time 10h Resolved communication with multiple agvs digital twins simultaneously! Still improvements related to status print and mantaining connection up!